hello/hello-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo
  namespace: default
spec:
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: jxlwqq/http-echo:latest
          ports:
            - containerPort: 8080
          args:
            - "--text=Hello into my world!"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
