hello/hello-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  selector:
    app: http-echo
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      appProtocol: http
